<resources>
    <string name="app_name">ArkhDialect</string>

    <!-- COMMONLY USED -->
    <string name="interview">Интервью</string>
    <string name="cards">Карточки</string>

    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="open">Открыть</string>
    <string name="select">Выбрать</string>

    <string name="no_activity_found">Нет приложения для открытия данного файла</string>
    <string name="no_settings_found">Не удается открыть настройки</string>

    <!-- MAIN ACTIVITY -->
    <string name="find_interview">Найти интервью</string>
    <string name="find_card">Найти карточку</string>

    <!-- INTERVIEW EDITOR -->
    <string name="cant_take_photo">Нельзя фотографировать из-за отсутствия камеры</string>

    <string name="interview_full_name_hint">ФИО</string>
    <string name="interview_interviewer_hint">Интервьюер</string>
    <string name="interview_location_hint">Район</string>
    <string name="interview_attachments">Вложения</string>
    <string name="interview_text_attachment">Заметки</string>
    <string name="interview_photo_attachment">Фотографии</string>
    <string name="interview_recording_attachment">Записи голоса</string>

    <!-- CARD EDITOR -->
    <string name="card_word_hint">Слово</string>
    <string name="card_location_hint">Район</string>
    <string name="card_characteristics_hint">Характеристики</string>
    <string name="card_meaning_hint">Значение слова</string>
    <string name="card_example_hint">Примеры употребления</string>

    <!-- TEXT ATTACHMENT -->
    <string name="text_attachment">Заметки</string>
    <string name="text_attachment_add">Добавить заметку</string>
    <string name="text_attachment_edit">Заметка</string>

    <!-- TEXT ATTACHMENT EDITOR -->
    <string name="text_attachment_title">Заголовок</string>
    <string name="text_attachment_data">Текст заметки</string>

    <!-- PHOTO ATTACHMENT -->
    <string name="photo_attachments">Фотографии</string>
    <string name="photo_attachment_add">Сделать фотографию</string>

    <!-- RECORDING ATTACHMENT -->
    <string name="recording_attachment">Записи голоса</string>
    <string name="recording_attachment_add">Записать голос</string>

    <string name="menu_item_delete">Удалить</string>

    <!-- SELECTION -->
    <string name="selected_items">Выбрано: %d</string>
    <string name="delete_selected_interview_title">Удалить интервью?</string>
    <string name="delete_selected_interview_message">Вы точно хотите удалить %d интервью?</string>

    <string name="delete_selected_card_title">Удалить карточки?</string>
    <string name="delete_selected_card_message">Вы точно хотите удалить %d карточек?</string>

    <string name="delete_selected_text_title">Удалить заметки?</string>
    <string name="delete_selected_text_message">Вы точно хотите удалить %d заметок?</string>

    <string name="delete_selected_photo_title">Удалить фотографии?</string>
    <string name="delete_selected_photo_message">Вы точно хотите удалить %d фото?</string>

    <string name="delete_selected_recording_title">Удалить записи?</string>
    <string name="delete_selected_recording_message">Вы точно хотите удалить %d записей?</string>

    <!-- DELETION -->
    <string name="delete_interview_title">Удалить интервью?</string>
    <string name="delete_interview_message">Вы точно хотите удалить это интервью?</string>

    <string name="delete_card_title">Удалить карточку?</string>
    <string name="delete_card_message">Вы точно хотите удалить эту карточку?</string>

    <string name="delete_text_title">Удалить заметку?</string>
    <string name="delete_text_message">Вы точно хотите удалить эту заметку?</string>

    <string name="delete_photo_title">Удалить фотографию?</string>
    <string name="delete_photo_message">Вы точно хотите удалить фотографию?</string>

    <string name="delete_recording_title">Удалить запись?</string>
    <string name="delete_recording_message">Вы точно хотите удалить эту запись?</string>

    <!-- SETTINGS -->
    <string name="activity_settings_title">Настройки</string>
    <string name="activity_about_title">О приложении</string>
    <string name="_rate_us">Оценить нас</string>
    <string name="general">Общие</string>
    <string name="other">Другие</string>
    <string name="language">Язык</string>
    <string name="export">Экспорт данных</string>
    <string name="export_data_title">Экспорт данных</string>
    <string name="export_data_message">Вы точно хотите экспортировать данные?</string>
    <string name="export_data">Экспорт</string>
    <string name="export_successful">Экспорт файлов выполнен успешно</string>
    <string name="export_unsuccessful">Не удалось выполнить экспорт файлов</string>
    <string name="export_directory">Zip файл сохранен в папку Документы</string>
    <string name="connect">Подключение к серверу</string>




    <!-- ABOUT -->
    <string name="creators">Создатели</string>
    <string name="first_full_name">Матвиенко Даниил Владимирович</string>
    <string name="seconds_full_name">Стариков Александр Алексеевич</string>
    <string name="info">3 курс ПМИ 151112</string>


    <!-- Empty values -->
    <string name="empty_interview_name">Неизвесное ФИО</string>
    <string name="empty_interview_district">Неизвестный район</string>

    <string name="empty_card_word">Неизвестное слово</string>
    <string name="empty_card_district">Неизвестный район</string>

    <string name="empty_text_title">Заголовок</string>
</resources>