<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetRight="16dp">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/interview_full_name_hint"
            android:inputType="text"
            android:singleLine="false" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/interview_interviewer_hint"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        app:boxBackgroundMode="filled"
        app:placeholderText="yeah">

        <EditText
            android:id="@+id/interviewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/interview_location_hint"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        app:boxBackgroundMode="filled"
        app:placeholderText="yeah">

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:text="@string/interview_attachments"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".OptionActivity"
        tools:layout_editor_absoluteY="81dp">

        <Button
            android:id="@+id/textAttachment"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/interview_text_attachment"
            app:cornerRadius="30dp"
            app:icon="@drawable/baseline_text_fields_24"
            app:iconGravity="textTop"
            app:iconSize="@dimen/interview_icon_size"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/photoAttachment"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/photoAttachment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/interview_photo_attachment"
            app:cornerRadius="30dp"
            app:icon="@drawable/baseline_photo_camera_24"
            app:iconGravity="textTop"
            app:iconSize="@dimen/interview_icon_size"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textAttachment"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/voiceAttachment"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/interview_recording_attachment"
            app:cornerRadius="30dp"
            app:icon="@drawable/baseline_mic_24"
            app:iconGravity="textTop"
            app:iconSize="@dimen/interview_icon_size"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/addAttachment"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAttachment" />

        <Button
            android:id="@+id/addAttachment"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            app:cornerRadius="30dp"
            app:icon="@drawable/baseline_add_24"
            app:iconGravity="textStart"
            app:iconSize="@dimen/interview_icon_size"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/voiceAttachment"
            app:layout_constraintTop_toBottomOf="@+id/photoAttachment" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/undo"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>