<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="card"
            type="cherryjam.narfu.arkhdialect.data.entity.Card" />
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="16dp">

            <EditText
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/card_word_hint"
                android:importantForAutofill="no"
                android:text="@={card.word}"
                android:inputType="text"
                android:singleLine="false" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_location_hint"
                app:expandedHintEnabled="false"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={card.location}"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_characteristics_hint"
                app:expandedHintEnabled="false"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/characteristics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={card.characteristics}"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/card_meaning_hint"
                app:expandedHintEnabled="false"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meaning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={card.meaning}"
                    android:gravity="top"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/card_example_hint"
                app:expandedHintEnabled="false"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/example"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={card.example}"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/undo"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>
</layout>